# Chess

./: .gitignore  CMakeLists.txt  README.md
core/include/: AI.hpp  Board.hpp  Constants.hpp  Enums.hpp  Game.hpp  Move.hpp  MoveGenerator.hpp  Piece.hpp
core/src/: AI.cpp  Board.cpp  Game.cpp  MoveGenerator.cpp  bindings.cpp  main.cpp
docs/: game.js  index.html  site.webmanifest
docs/wasm/: chess.js  chess.wasm
tests/: test_core.cpp
web/: chess.wasm  game.js  index.html  style.css
